# tiny_engine

./: CMakeLists.txt  README.md
include/core/: Camera.h  Controller.h  Engine.h  Entity.h  Scene.h  SwapBuffer.h  matrix.h  mesh.h  stl.h  vector.h
include/os/: Window.h  WindowWindows.h
samples/: eevee.STL  raptor.stl
src/core/: Camera.cpp  Engine.cpp  Entity.cpp  SwapBuffer.cpp  mesh.cpp
src/os/: WindowWindows.cpp
src/test/: main.cpp
